--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -33,5 +33,6 @@
         "tuple": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
